# python-commons

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  COVERAGE_REPORT.md  EXAMPLES.md  Makefile  PROJECT_STATUS.md  QUICK_START_TESTING.md  README.md  TESTING_SUMMARY.md  TEST_STATUS.md  pyproject.toml  pytest.ini  requirements-test.txt  tox.ini
.claude/: 100_PERCENT_COVERAGE_CHECKLIST.md  MASTER_TASK_LIST.md  PRODUCTION_CHECKLIST.md
.claude/skills/testcontainer-testing/: CHANGELOG.md  SKILL.md
.claude/skills/testcontainer-testing/examples/: README.md  localstack_conftest.py  mockserver_conftest.py  root_conftest.py  test_http_client_mockserver.py  test_redis_locks.py
.claude/skills/testcontainer-testing/references/: patterns.md  services.md
.claude/skills/testcontainer-testing/templates/: conftest_localstack.py  conftest_postgres.py  conftest_redis.py  test_example.py
.github/workflows/: ci.yml
docs/: TESTCONTAINER_SKILL_ENHANCEMENT.md  TESTCONTAINER_SKILL_FINAL.md
docs/plans/: 2025-11-07-world-class-testcontainer-skill.md
src/internal_aws/: NOTE.md  __init__.py  pyproject.toml
src/internal_aws/internal_aws/: __init__.py
src/internal_aws/internal_aws/auth/: credentials.py
src/internal_aws/internal_aws/dynamodb/: __init__.py  table.py
src/internal_aws/internal_aws/s3/: __init__.py  client.py
src/internal_aws/internal_aws/sqs/: __init__.py  client.py  consumer.py
src/internal_base/: __init__.py  pyproject.toml
src/internal_base/internal_base/: __init__.py
src/internal_base/internal_base/logging/: __init__.py  config.py  logger.py
src/internal_base/internal_base/service/: __init__.py  async_service.py  protocol.py
src/internal_cache/: __init__.py  pyproject.toml
src/internal_cache/internal_cache/: __init__.py  client.py  decorators.py  locks.py
src/internal_fastapi/: NOTE.md  __init__.py  pyproject.toml
src/internal_fastapi/internal_fastapi/: __init__.py
src/internal_fastapi/internal_fastapi/api/: __init__.py  api_service.py  config.py  fastapi.py  lifecycle_manager.py
src/internal_fastapi/internal_fastapi/auth/: __init__.py  config.py  middleware.py
src/internal_fastapi/internal_fastapi/health/: __init__.py  endpoint.py
src/internal_fastapi/internal_fastapi/logging/: __init__.py  middleware.py
src/internal_http/: __init__.py  pyproject.toml
src/internal_http/internal_http/: __init__.py
src/internal_http/internal_http/auth/: __init__.py  auth.py
src/internal_http/internal_http/client/: __init__.py  http_client.py
src/internal_http/internal_http/models/: __init__.py  config.py
src/internal_rdbms/: __init__.py  pyproject.toml
src/internal_rdbms/internal_rdbms/: __init__.py
src/internal_rdbms/internal_rdbms/database/: __init__.py  config.py  db.py  mysql.py  postgres.py  sqlite.py  sqlite_mem.py
src/internal_rdbms/internal_rdbms/utils/: __init__.py  datetime_utils.py
tests/: README.md  __init__.py  conftest.py
tests/integration/internal_aws/: conftest.py  test_dynamodb.py  test_s3.py  test_sqs.py
tests/integration/internal_cache/: __init__.py  test_redis.py
tests/integration/internal_http/: conftest.py  test_http_client.py
tests/integration/internal_rdbms/: __init__.py  conftest.py  test_databases.py  test_postgres.py
tests/integration/test_internal_aws/: conftest.py  test_dynamodb.py  test_s3.py  test_sqs.py
tests/integration/test_internal_cache/: test_client_comprehensive.py  test_client_comprehensive.py.backup  test_decorators_comprehensive.py  test_redis.py
tests/integration/test_internal_http/: __init__.py  conftest.py  test_http_client.py  test_http_client_integration.py
tests/integration/test_internal_rdbms/: conftest.py  test_databases.py  test_postgres.py
tests/test_utils/: __init__.py  wait.py
tests/unit/internal_aws/: test_credentials.py
tests/unit/internal_base/: conftest.py  test_health.py  test_logger_edge_cases.py  test_logging.py  test_protocol.py  test_resilience.py  test_secrets.py  test_service.py  test_service_edge_cases.py  test_settings.py  test_telemetry.py
tests/unit/internal_cache/: __init__.py  test_client.py  test_config.py  test_decorators.py  test_locks.py
tests/unit/internal_fastapi/: test_config.py  test_fastapi_comprehensive.py  test_health.py  test_lifecycle_manager.py  test_lifecycle_manager_comprehensive.py  test_logging_middleware.py  test_middleware.py
tests/unit/internal_http/: test_auth.py  test_config.py  test_http_client.py
tests/unit/internal_rdbms/: __init__.py  test_base.py  test_config.py  test_database_config_comprehensive.py  test_datetime_utils.py  test_session.py  test_sqlite_mem_comprehensive.py
