[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-commons"
version = "0.1.0"
description = "Python commons monorepo for cloud-deployed microservices"
authors = [
    { name = "Python Commons Team", email = "admin@lazytrot.dev" }
]
requires-python = ">=3.11"
readme = "README.md"

# Development dependencies
[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.1",  # Parallel testing

    # Test containers
    "testcontainers>=3.7.1",
    "testcontainers[postgres]>=3.7.1",
    "testcontainers[redis]>=3.7.1",
    "testcontainers[mysql]>=3.7.1",

    # Linting and formatting
    "ruff>=0.1.6",

    # Type checking
    "mypy>=1.7.0",
    "types-redis",
    "types-pyyaml",

    # Security
    "bandit[toml]>=1.7.5",
    "safety>=2.3.0",

    # Testing utilities
    "faker>=20.0.0",
    "factory-boy>=3.3.0",
    "httpx>=0.25.0",  # For testing FastAPI

    # Coverage reporting
    "coverage[toml]>=7.3.2",

    # Build tools
    "build>=1.0.0",
    "twine>=4.0.0",

    # Documentation
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*" = ["ARG", "S101"]  # Allow assert and unused args in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=90",
    "-vv",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter checking
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "testcontainers.*",
    "pybreaker.*",
    "coloredlogs.*",
    "pythonjsonlogger.*",
    "aioboto3.*",
    "botocore.*",
]
ignore_missing_imports = true

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["/tests", "/.tox", "/.venv", "/venv"]
skips = ["B101"]  # Skip assert_used in tests

# Build configuration
[tool.build]
source = "src"
