[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "internal-aws"
version = "0.1.0"
authors = [
  { name="Claude", email="claude@anthropic.com" },
]
description = "Utilities for interacting with Amazon Web Services."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "internal-base",
    "aioboto3>=12.0.0",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["internal_aws*"]
exclude = ["tests*"]
