[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "internal-cache"
version = "0.1.0"
authors = [
  { name="Claude", email="claude@anthropic.com" },
]
description = "Redis caching utilities and distributed locking."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "internal-base",
    "redis[hiredis]>=5.0.0",
    "hiredis>=2.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["internal_cache*"]
exclude = ["tests*"]
