[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "internal-fastapi"
version = "0.1.0"
authors = [
  { name="Claude", email="claude@anthropic.com" },
]
description = "Common helpers and configurations for FastAPI-based services."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "internal-base",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["internal_fastapi*"]
exclude = ["tests*"]
