[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "internal-http"
version = "0.1.0"
description = "HTTP client with authentication and retry logic"
requires-python = ">=3.11"
dependencies = [
    "internal-base",
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "testcontainers>=3.7.1",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["internal_http*"]
exclude = ["tests*"]
